--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -1,11 +1,11 @@
 ---
-title: "Talk 1 on Relevant Topic in Your Field"
+title: "A Pair of Diophantine Equations Involving the Fibonacci Nubmers"
 collection: talks
 type: "Talk"
-permalink: /talks/2012-03-01-talk-1
-venue: "UC San Francisco, Department of Testing"
+permalink: /talks/2025-01-08-talk
+venue: "AMS Contributed Paper Session on Number Theory and Field Theory"
 date: 2012-03-01
-location: "San Francisco, CA, USA"
+location: "Joint Mathematics Meetings"
 ---
 
-This is a description of your talk, which is a markdown file that can be all markdown-ified like any other post. Yay markdown!
+A joint presentation 
