--- a/_talks/2025-01-08-talk1.md
+++ b/_talks/2025-01-08-talk1.md
@@ -4,8 +4,8 @@ collection: talks
 type: "Talk"
 permalink: /talks/2025-01-08-talk
 venue: "AMS Contributed Paper Session on Number Theory and Field Theory"
-date: 2012-03-01
+date: 2025-01-08
 location: "Joint Mathematics Meetings"
 ---
 
-A joint presentation 
+A joint presentation given with Liran Li on our work from the Polymath Jr. REU.
